<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.growth.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.growth.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.growth.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.growth.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/claimFragment"
        android:name="com.example.growth.ClaimFragment"
        android:label="@string/title_claim"
        tools:layout="@layout/fragment_claim" />
    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.example.growth.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/payslipFragment"
        android:name="com.example.growth.PayslipFragment"
        android:label="@string/title_payslip"
        tools:layout="@layout/fragment_payslip" />
    <fragment
        android:id="@+id/leaveFragment"
        android:name="com.example.growth.LeaveFragment"
        android:label="@string/title_leave"
        tools:layout="@layout/fragment_leave" />
</navigation>