<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/claimFragment"
        android:icon="@drawable/ic_baseline_sticky_note_2_24"
        android:title="@string/title_claim" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/payslipFragment"
        android:icon="@drawable/ic_baseline_monetization_on_24"
        android:title="@string/title_payslip" />

    <item
        android:id="@+id/leaveFragment"
        android:icon="@drawable/ic_baseline_timelapse_24"
        android:title="@string/title_leave" />

<!--    <item-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
<!--        android:title="@string/title_dashboard" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
<!--        android:title="@string/title_notifications" />-->

</menu>